2001-11-24  Werner Koch  <wk@gnupg.org>

	* assuan-buffer.c (_assuan_read_line): Deal with reads of more
	than a line.
	* assuan-defs.h: Add space in the context for this.
	
